[package]
name = "roguelike-rltk-tutorial"
version = "0.1.0"
authors = ["Thales Macedo Garitezi <thalesmg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.5.15"
specs = "0.15.0"
specs-derive = "0.4.0"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
